Fix Form[inline] help and extra overlapped
close #12725

--- a/components/form/style/index.less
+++ b/components/form/style/index.less
@@ -381,9 +381,10 @@ form {
       margin-bottom: 24px;
     }
 
-    > .@{form-prefix-cls}-item-control-wrapper, > .@{form-prefix-cls}-item-label {
+    > .@{form-prefix-cls}-item-control-wrapper,
+    > .@{form-prefix-cls}-item-label {
       display: inline-block;
-      vertical-align: middle;
+      vertical-align: top;
     }
   }
 
@@ -393,11 +394,6 @@ form {
 
   .has-feedback {
     display: inline-block;
-  }
-
-  // Fix https://github.com/ant-design/ant-design/issues/1040
-  .@{form-prefix-cls}-explain {
-    position: absolute;
   }
 }
 
